<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/user_name"
        android:layout_alignTop="@+id/sign_up"
        android:text="@string/sign_in"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="346dp" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/email"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="146dp"
        android:text="@string/sign_up"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="346dp" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password_verify"
        android:layout_alignParentTop="true"
        android:layout_marginTop="71dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="80dp"
        android:layout_alignLeft="@+id/password_verify" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password"
        android:layout_alignParentTop="true"
        android:layout_marginTop="131dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="133dp"
        android:layout_alignLeft="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="196dp" />

    <EditText
        android:id="@+id/password_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="216dp"
        android:ems="10"
        android:hint="@string/verify_password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="261dp" />

</RelativeLayout>