<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/base_padding"
        android:layout_marginTop="@dimen/medium_margin"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/icon"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/huge_margin"
            android:src="@drawable/ic_borrow_requests_icon_1" />

        <EditText
            android:id="@+id/user_name"
            android:layout_marginTop="@dimen/huge_margin"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="5dip"
            android:background="@drawable/round_edittext" />
        <EditText
            android:id="@+id/email"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/fui_email_hint"
            android:padding="5dip"
            android:background="@drawable/round_edittext" />
        <EditText
            android:id="@+id/password"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="5dip"
            android:ems="10"
            android:background="@drawable/round_edittext"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/password_verify"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/verify_password"
            android:padding="5dip"
            android:ems="10"
            android:background="@drawable/round_edittext"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners_button"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_gravity="center"
            android:text="@string/continue_1"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_margin"
            style="@style/Text_white"
            android:text="@string/existing_account"/>
    </LinearLayout>
</LinearLayout>