<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/sign_in_container"
        android:orientation="vertical"
        android:background="@drawable/main_gradient_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/huge_margin"
            android:src="@drawable/ic_borrow_requests_icon_1" />

        <EditText
            android:id="@+id/email"
            android:layout_marginTop="@dimen/huge_margin"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="5dip"
            android:background="@drawable/round_edittext" />
        <EditText
            android:id="@+id/password"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="5dip"
            android:background="@drawable/round_edittext" />
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners_button"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_margin"
            style="@style/Text_white"
            android:text="@string/forgot_password"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_in_forgot_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_gradient_background"
        android:gravity="center_horizontal"
        android:padding="@dimen/base_padding"
        android:orientation="vertical"
        tools:visibility="gone">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/huge_margin"
            android:src="@drawable/ic_borrow_requests_icon_1" />

        <EditText
            android:id="@+id/forgot_password_email"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/fui_email_hint"
            android:padding="5dip"
            android:background="@drawable/round_edittext" />
        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corners_button"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_gravity="center"
            android:text="@string/reset_email"
            android:padding="@dimen/small_padding"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>